--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -54,7 +54,7 @@ hide_hero: true
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <hr>
-                    <p>Dieses Material wurde von der Organisation <a href="{{ site.data.owner-link-list[page.owner] }}" target="_blank">{{ site.data.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE{% if site.data.owner-short-name-list[page.owner] %}/{{ site.data.owner-short-name-list[page.owner] }}{% endif %}</p>
+                    <p>Dieses Material wurde von der Organisation <a href="{{ site.data.materialsammlung.owner-link-list[page.owner] }}" target="_blank">{{ site.data.materialsammlung.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE{% if site.data.materialsammlung.owner-short-name-list[page.owner] %}/{{ site.data.materialsammlung.owner-short-name-list[page.owner] }}{% endif %}</p>
                     <hr>
                 </div>
             </div>
