--- a/_includes/add_project.liquid
+++ b/_includes/add_project.liquid
@@ -159,12 +159,11 @@
           <div id="idea-submit"></div>
           <div id="idea-submit-message" style="display: none">
             <h2>
-              Vielen Dank! Die Idee wird gespeichert und lässt sich nach der Freigabe unter <a href="https://demokratielabore.de/materialsammlung/ideas"><font color="red">https://demokratielabore.de/materialsammlung/ideas</font></a> bearbeiten <h2>
-                <p>
+              Vielen Dank! Die Idee wird gespeichert. Du findest sie nach der Freigabe unter: <a style="font-size: 28px;" href="https://demokratielabore.de/materialsammlung/ideas">Hier</a></h2>
           </div>
           <div id="idea-submit-error" style="display: none">
-            <p/>
-            <h2 style="color: red">Beim Absenden deiner Idee ist etwas schiefgelaufen. Bitte versuche es in einer Minute erneut und halte dieses Fenster geöffnet.<h2>
+
+            <h2 style="color: red">Beim Absenden deiner Idee ist etwas schiefgelaufen. Hast du die Felder mit den roten Sternchen ausgefüllt? Wenn ja, dann halte dieses Fenster geöffnet, warte bitte eine Minute und versuche es erneut.</h2>
           </div>
           <div id="contact-template" style="display: none">
             <label for="project-form-author-name"><strong>Name</strong></label>
