--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<page.!DOCTYPE html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="de"> <![endif]-->
 <!--[if IE 7]>
@@ -40,7 +40,7 @@
 	<div class="page-wrap">
         {% include header-nav.liquid %}
         <div class="row">
-            {% if page.hide_hero != true %}
+            {% if page.hide_hero != true and page.layout != 'idee' %}
                 <div class="hero-wrap"></div>
                     {% if site.data.events  %}
                         {% include event-calendar.html %}
