changed message after sending idea

--- a/_includes/add_project.liquid
+++ b/_includes/add_project.liquid
@@ -159,7 +159,7 @@
           <div id="idea-submit"></div>
           <div id="idea-submit-message" style="display: none">
             <h2>
-              Vielen Dank! Die Idee wird gespeichert. Du findest sie nach der Freigabe unter: <a style="font-size: 28px;" href="https://demokratielabore.de/materialsammlung/ideas">Hier</a></h2>
+              Vielen Dank! Die Idee wird gespeichert. Du findest sie nach der Freigabe <a style="font-size: 28px;" href="https://demokratielabore.de/materialsammlung/ideas">Hier</a>.</h2>
           </div>
           <div id="idea-submit-error" style="display: none">
 
