--- a/_layouts/digital-ag.html
+++ b/_layouts/digital-ag.html
@@ -62,6 +62,8 @@
         </div>
     </div>
 </div>
+
+<!-- > Vorhandene Digital-AGs
 <div class="col-xs-12 fond_red_gradient jumbotron">
     <div class="row">
         <div class="container">
@@ -86,7 +88,7 @@
         </div>
     </div>
 </div>
-
+-->
 
 <footer>
     <div class="jumbotron fond__white partner">
