--- a/_includes/unter-thema-teaser-tile.html
+++ b/_includes/unter-thema-teaser-tile.html
@@ -1,4 +1,4 @@
-<div class="post-teaser-inner {{ site.data.unterthema-color[include.post.unterthema] }}">
+<div class="post-teaser-inner {{ site.data.materialsammlung.unterthema-color[include.post.unterthema] }}">
     {% assign path = include.post.url %}
     <a href="{{post.link}}">
         <img src="{{post.img}}" class="img-responsive" />
