fixed img on teaser tile

--- a/_includes/tool-teaser-tile.html
+++ b/_includes/tool-teaser-tile.html
@@ -1,7 +1,11 @@
 <div class="post-teaser-inner tool">
     {% assign path = include.post.url %}
     <div class="post-teaser-content">
-
+        {% if include.post.img %}
+        <div>
+            <img class="tool-picture" src="{{ include.post.img }}" alt="">
+        </div>
+        {% endif %}
         <div class="post-teaser-description workshop">
             <p>Tool</p>
             <a href="{{ path }}"><h3 class="post-teaser-title" >{{ include.post.title }}</h3></a>
