fixed for mobile

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -158,3 +158,8 @@ label{
    color: #f21c5e !important;
    font-size: 18px !important;
 }
+
+.form_wrap{
+    padding-left: 5px;
+    padding-right: 10px;
+}
