--- a/_includes/add_project.liquid
+++ b/_includes/add_project.liquid
@@ -9,7 +9,7 @@
             <div class="row">
                 <h2 class="section-headline">Projektidee hinzufügen</h2>
                 <p>Schön, dass du deine Ideen über die Demokratielabore-Plattform teilen möchtest! Wir freuen uns über Beispiele, wie du selbst oder dir bekannte Projekte die Gesellschaft positiv gestaltet haben.
-                   <br>Bitte achte darauf, dass verlinkte Inhalte oder verwendete Tools möglichst unter einer freien Lizenz stehen.</p>
+                   <br>Bitte achte darauf, dass verlinkte Inhalte oder verwendete Tools möglichst unter einer <a href="https://opendefinition.org/od/2.0/de/">freien Lizenz</a> stehen.</p>
             </div>
             <div class="row">
               <form id="edit-idea-form" class="form" method="post" action="{{ site.staticman.server }}/v2/entry/{{ site.staticman.repository }}/{{ site.staticman.branch }}/ideas">
