--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -13,7 +13,7 @@ hide_hero: true
                     <div class="page-sub-material"><a href="./index.html"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
                     {% assign flag = false %}
                     {% for p in site.pages %}
-                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
+                    {% if p.subtool == page.subtool and p.layout contains 'idee' %}
                     {% assign flag = true %}
                     {% endif %}
                     {% endfor %}
