--- a/_includes/idea-teaser-tile.html
+++ b/_includes/idea-teaser-tile.html
@@ -9,7 +9,10 @@
             <p>
                 {{ include.post.teaser | remove: '<p>' | remove: '</p>'}}
             </p>
-            <a class="post-teaser-read-more" href="{{ path }}">zur Idee</a>
+            {% if include.post.dauer %}
+            <p>⏰ {{ site.data.materialsammlung.zeitbedarf[include.post.dauer] }}</p>
+            {% endif %}
+            <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
         </div>
     </div>
 </div>
