--- a/_includes/unter-thema-ideen-teaser-tile.html
+++ b/_includes/unter-thema-ideen-teaser-tile.html
@@ -11,7 +11,7 @@
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
             </p>
-            <a class="post-teaser-read-more" href="{{ path }}">zum Thema</a>
+            <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
         </div>
     </div>
 </div>
