--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -24,7 +24,7 @@ hide_hero: true
                     {% for p in site.pages %}
                     {% if p.tool contains page.tool and p.layout == 'untertool' %}
                         <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser tool">
-                            {% include tool-teaser-tile.html post=p %}
+                            {% include unter-tool-teaser-tile.html post=p %}
                         </div>
                     {% endif %}
                     {% endfor %}
