--- a/_includes/unter-thema-teaser-tile.html
+++ b/_includes/unter-thema-teaser-tile.html
@@ -10,7 +10,7 @@
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
             </p>
-            <a class="post-teaser-read-more" href="{{ path }}">zum Thema</a>
+            <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
         </div>
     </div>
 </div>
