--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -21,15 +21,30 @@ hide_hero: true
                     </p>
                 </div>
             </div>
+            <div class="filter-items green">
+              <h4 class="filter-items-headline">NACH THEMEN FILTERN:</h4>
+              <div class="filter-items-inner col-xs-24">
+                  {% for p in site.pages %}
+                    {% if p.layout == 'thema' %}
+                    <a href="/" data-filter=".{{ p.thema }}" class="filter-item red">{{ p.title }}</a>
+                    {% endif %}
+                  {% endfor %}
+              </div>
+            </div>
             <div class="container">
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
-                    {% if p.layout contains 'idee' %}
-                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea">
-                            {% include idea-teaser-tile.html post=p %}
-                        </div>
-                    {% endif %}
+                      {% if p.layout contains 'idee' %}
+                          {% for pt in site.pages %}
+                              {% if pt.layout == 'thema' and pt.themacontent == p.themacontet %}
+                                  {% assign thema =  pt.thema %}
+                              {% endif %}
+                          {% endfor %}
+                          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea {{ thema }}">
+                              {% include idea-teaser-tile.html post=p %}
+                          </div>
+                      {% endif %}
                     {% endfor %}
                 </div>
             </div>
