--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -26,8 +26,11 @@ hide_hero: true
               <div class="filter-items-inner col-xs-24">
                   {% for p in site.pages %}
                     {% if p.layout == 'thema' %}
-                    <a href="/" data-filter=".{{ p.thema }}" class="filter-item red">{{ p.title }}</a>
+                        <a href="/" data-filter=".{{ p.thema }}" class="filter-item red">{{ p.title }}</a>
                     {% endif %}
+                    {% if p.layout == 'tool' %}
+                        <a href="/" data-filter=".{{ p.tool }}" class="filter-item red">{{ p.title }}</a>
+                  {% endif %}
                   {% endfor %}
               </div>
             </div>
@@ -37,11 +40,14 @@ hide_hero: true
                     {% for p in site.pages %}
                       {% if p.layout contains 'idee' %}
                           {% for pt in site.pages %}
-                              {% if pt.layout == 'thema' and pt.themacontent == p.themacontet %}
-                                  {% assign thema =  pt.thema %}
-                              {% endif %}
+                            {% if pt.layout == 'thema' and pt.themacontent == p.themacontet %}
+                                {% assign thema =  pt.thema %}
+                            {% endif %}
+                            {% if pt.layout == 'tool' and pt.subtool == p.subtool %}
+                                {% assign tool =  pt.tool %}
+                            {% endif %}
                           {% endfor %}
-                          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea {{ thema }}">
+                          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea {{ thema }} {{ tool }}">
                               {% include idea-teaser-tile.html post=p %}
                           </div>
                       {% endif %}
