--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -43,7 +43,7 @@ hide_hero: true
                             {% if pt.layout == 'thema' and pt.themacontent == p.themacontet %}
                                 {% assign thema =  pt.thema %}
                             {% endif %}
-                            {% if pt.layout == 'tool' and pt.subtool == p.subtool %}
+                            {% if pt.layout == 'untertool' and pt.subtool == p.subtool %}
                                 {% assign tool =  pt.tool %}
                             {% endif %}
                           {% endfor %}
