--- a/_sass/_filter-items.scss
+++ b/_sass/_filter-items.scss
@@ -59,6 +59,10 @@ filter items
       background-color: #FF003F;
       color: $white;
       }
+      &.green{
+      background-color: #00f9ac;
+      color: $black;
+      }
       &.darkred {
       background-color: #D90036;
       color: $white;
