--- a/_sass/_filter-items.scss
+++ b/_sass/_filter-items.scss
@@ -59,6 +59,10 @@ filter items
       background-color: #FF003F;
       color: $white;
       }
+      &.blue{
+      background-color: #000dfe;
+      color: $white;
+      }
       &.green{
       background-color: #00f9ac;
       color: $black;
