--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -20,7 +20,7 @@ hide_hero: true
                         {{ content }}
                     </p>
                     <div class="filter-items green ideas col-xs-24 ">
-                        <h4 class="filter-items-headline ideas">NACH THEMEN, TOOLS & ZEITBEDARF FILTERN:</h4>
+                        <h4 class="filter-items-headline ideas">NACH TOOLS, THEMEN & ZEITBEDARF FILTERN:</h4>
                         <div class="filter-items-inner ">
                             {% for p in site.pages %}
                             {% if p.layout == 'thema' %}
