--- a/_sass/_post-teaser.scss
+++ b/_sass/_post-teaser.scss
@@ -121,6 +121,10 @@
           p{
             font-size: 16px;
             margin: 20px 0;
+            &.ort{
+                color: #0A00FF;
+                font-weight: bold;
+            }
           }
         }
         a{
