--- a/_layouts/digital-ag.html
+++ b/_layouts/digital-ag.html
@@ -63,14 +63,13 @@
     </div>
 </div>
 
-<!-- > Vorhandene Digital-AGs
 <div class="col-xs-12 fond_red_gradient jumbotron">
     <div class="row">
         <div class="container">
             <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
-                <h2 class="section-headline">Unsere Digital-Ags</h2>
+                <h2 class="section-headline">Werkstätten für Jugendliche</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua
+                    Hier findest du regionale Werkstätten aus unserem Netzwerk, zu denen du gehen und direkt loslegen kannst. Vom gut ausgestatteten Lab bis hin zu regelmäßigen Workshops ist alles dabei. Bei Fragen wende dich bitte direkt an die Werkstätten.
                 </p>
             </div>
         </div>
@@ -88,7 +87,7 @@
         </div>
     </div>
 </div>
--->
+
 
 {% include footer.html %}
 
