--- a/_layouts/digital-ag.html
+++ b/_layouts/digital-ag.html
@@ -67,7 +67,7 @@
     <div class="row">
         <div class="container">
             <div class="col-lg-10 col-lg-offset-1 section-workshop text__white">
-                <h2 class="section-headline">Werkstätten für Jugendliche</h2>
+                <h2 class="section-headline">Digital-AGs und Jugend-Labs</h2>
                 <p>
                     Hier findest du regionale Werkstätten aus unserem Netzwerk, zu denen du gehen und direkt loslegen kannst. Vom gut ausgestatteten Lab bis hin zu regelmäßigen Workshops ist alles dabei. Bei Fragen wende dich bitte direkt an die Werkstätten.
                 </p>
