--- a/_includes/event-calendar.html
+++ b/_includes/event-calendar.html
@@ -1,4 +1,4 @@
-<div class="events-wrap container">
+<!---<div class="events-wrap container">
     <div class="events-panel">
         <div class="events-panel-inner">
             <h3 class="events-headline">Kommende Events</h3>
@@ -29,6 +29,6 @@
             </ul>
         </div>
     </div>
-</div>
+</div>--->
 
 
