--- a/_includes/unter-thema-ideen-teaser-tile.html
+++ b/_includes/unter-thema-ideen-teaser-tile.html
@@ -10,6 +10,7 @@
             <p>
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
+                {% if include.post.desc %}{{ include.post.desc }}{% endif %}
             </p>
             <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
         </div>
