--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -22,6 +22,7 @@ hide_hero: true
                     </p>
                     <hr>
                     <h1 class="section-headline">{{ page.title }}</h1>
+                    <p style="font-style: italic;">{{ page.desc }}</p>
                     <p>
                       {{ content }}
                     </p>
