changed color of the idea link button again

--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -27,7 +27,7 @@ hide_hero: true
                       {{ content }}
                     </p>
                     {% if page.link %}
-                    <center><a href="{{ page.link }}" type="button" class="btn btn-default" style="color: #00f9ac">Mehr zur Idee</a></center>
+                    <center><a href="{{ page.link }}" type="button" class="btn btn-default" style="background-color: #00f9ac; color: black">Mehr zur Idee</a></center>
                     {% endif %}
                     {% if page.themacontent or page.subtool %}
                         <hr>
