--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -2,7 +2,6 @@
 layout: base
 title: "Ideen"
 hide_hero: true
-
 ---
 
 <div class="row">
@@ -22,17 +21,28 @@ hide_hero: true
                     <div class="filter-items green ideas col-xs-24 ">
                         <h4 class="filter-items-headline ideas">NACH TOOLS, THEMEN & ZEITBEDARF FILTERN:</h4>
                         <div class="filter-items-inner ">
+                            <select data-group="thema" class="selectFilter">
+                              <option value="no-filter" selected>Thema auswählen</option>
                             {% for p in site.pages %}
                             {% if p.layout == 'thema' %}
-                            <a href="/" data-filter=".{{ p.thema }}" class="filter-item red">{{ p.title }}</a>
-                            {% endif %}
-                            {% if p.layout == 'tool' %}
-                            <a href="/" data-filter=".{{ p.tool }}" class="filter-item blue">{{ p.title }}</a>
+                            <option value="{{ p.thema }}">{{ p.title }}</option>
                             {% endif %}
                             {% endfor %}
-                            <a href="/" data-filter=".{{ 'dauer-1' }}" class="filter-item green">{{ site.data.materialsammlung.zeitbedarf['dauer-1'] }}</a>
-                            <a href="/" data-filter=".{{ 'dauer-2' }}" class="filter-item green">{{ site.data.materialsammlung.zeitbedarf['dauer-2'] }}</a>
-                            <a href="/" data-filter=".{{ 'dauer-3' }}" class="filter-item green">{{ site.data.materialsammlung.zeitbedarf['dauer-3'] }}</a>
+                            </select>
+                            <select data-group="tool" class="selectFilter">
+                              <option value="no-filter" selected>Tool auswählen</option>
+                            {% for p in site.pages %}
+                            {% if p.layout == 'tool' %}
+                            <option value="{{ p.tool }}">{{ p.title }}</option>
+                            {% endif %}
+                            {% endfor %}
+                            </select>
+                            <select data-group="time" class="selectFilter">
+                              <option value="no-filter" selected>Dauer auswählen</option>
+                              <option value="{{ 'dauer-1' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-1'] }}</option>
+                              <option value="{{ 'dauer-2' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-2'] }}</option>
+                              <option value="{{ 'dauer-3' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-3'] }}</option>
+                            </select>
                         </div>
                     </div>
                 </div>
