--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -18,30 +18,36 @@ hide_hero: true
                     <p>
                         {{ content }}
                     </p>
-                    <div class="filter-items green ideas col-xs-24 ">
-                        <h4 class="filter-items-headline ideas">NACH TOOLS, THEMEN & ZEITBEDARF FILTERN:</h4>
-                        <div class="filter-items-inner ">
-                          <h2>Thema auswählen</h2>
-                            <select multiple="multiple" data-placeholder=" " data-group="thema" class="selectFilter">
+                    <h3>NACH THEMEN, TOOLS & ZEITBEDARF FILTERN:</h3>
+
+                    <div class="filter-items green ideas col-xs-24 col-lg-4">
+                        <div class="filter-items-inner filterselect">
+                            <select multiple="multiple" data-placeholder="Thema wählen" data-group="thema" class="selectFilter">
                             {% for p in site.pages %}
                             {% if p.layout == 'thema' %}
                             <option value="{{ p.thema }}">{{ p.title }}</option>
                             {% endif %}
                             {% endfor %}
                             </select>
-                              <h2>Tool auswählen</h2>
-                            <select multiple="multiple" data-placeholder=" "  data-group="tool" class="selectFilter">
-                            {% for p in site.pages %}
-                            {% if p.layout == 'tool' %}
-                            <option value="{{ p.tool }}">{{ p.title }}</option>
-                            {% endif %}
-                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="filter-items green ideas col-xs-24 col-lg-4">
+                        <div class="filter-items-inner filterselect">
+                            <select multiple="multiple" data-placeholder="Tool wählen"  data-group="tool" class="selectFilter">
+                                {% for p in site.pages %}
+                                {% if p.layout == 'tool' %}
+                                <option value="{{ p.tool }}">{{ p.title }}</option>
+                                {% endif %}
+                                {% endfor %}
                             </select>
-                            <h2>Dauer auswählen</h2>
-                            <select multiple="multiple" data-placeholder=" "  data-group="time" class="selectFilter">
-                              <option value="{{ 'dauer-1' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-1'] }}</option>
-                              <option value="{{ 'dauer-2' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-2'] }}</option>
-                              <option value="{{ 'dauer-3' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-3'] }}</option>
+                        </div>
+                    </div>
+                    <div class="filter-items green ideas col-xs-24 col-lg-4">
+                        <div class="filter-items-inner filterselect">
+                            <select multiple="multiple" data-placeholder="Zeitbedarf wählen"  data-group="time" class="selectFilter">
+                                <option value="{{ 'dauer-1' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-1'] }}</option>
+                                <option value="{{ 'dauer-2' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-2'] }}</option>
+                                <option value="{{ 'dauer-3' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-3'] }}</option>
                             </select>
                         </div>
                     </div>
