--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -460,6 +460,14 @@ label {
         line-height: 1.6em;
     }
   }
+  .filterselect{
+    .chosen-choices li.search-choice{
+
+            font-size: 16px;
+            line-height: 1.1em;
+
+      }
+  }
 }
 
 
