--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -22,7 +22,7 @@ hide_hero: true
 
                     <div class="filter-items green ideas col-xs-24 col-lg-4">
                         <div class="filter-items-inner filterselect">
-                            <label for="filter-themen">Thema</label>
+                            <label for="filter-themen">Thema</label><br>
                             <select multiple="multiple" data-placeholder="Bitte wählen" data-group="thema" class="selectFilter">
                             {% for p in site.pages %}
                             {% if p.layout == 'thema' %}
@@ -34,7 +34,7 @@ hide_hero: true
                     </div>
                     <div class="filter-items green ideas col-xs-24 col-lg-4">
                         <div class="filter-items-inner filterselect">
-                            <label for="filter-tools">Tool</label>
+                            <label for="filter-tools">Tool</label><br>
                             <select multiple="multiple" data-placeholder="Bitte wählen"  data-group="tool" class="selectFilter">
                                 {% for p in site.pages %}
                                 {% if p.layout == 'tool' %}
@@ -46,7 +46,7 @@ hide_hero: true
                     </div>
                     <div class="filter-items green ideas col-xs-24 col-lg-4">
                         <div class="filter-items-inner filterselect">
-                            <label for="filter-zeitbedarf">Zeitbedarf</label>
+                            <label for="filter-zeitbedarf">Zeitbedarf</label><br>
                             <select multiple="multiple" data-placeholder="Bitte wählen"  data-group="time" class="selectFilter">
                                 <option value="{{ 'dauer-1' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-1'] }}</option>
                                 <option value="{{ 'dauer-2' }}">{{ site.data.materialsammlung.zeitbedarf['dauer-2'] }}</option>
