--- a/_sass/_filter-items.scss
+++ b/_sass/_filter-items.scss
@@ -17,7 +17,7 @@ filter items
 
 .filter-items{
 
-  margin: 30px auto !important;
+  margin: 0px auto;
   display: table;
 
   .filter-items-headline{
