--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -56,7 +56,7 @@ hide_hero: true
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <hr>
-                    <p>Dieses Material wurde von der Organisation <a href="{{ site.data.materialsammlung.owner-link-list[page.owner] }}" target="_blank">{{ site.data.materialsammlung.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE/{{ site.data.materialsammlung.owner-short-name-list[page.owner] }}</p>
+                    <p>Dieses Material wurde von der Organisation <a href="{{ site.data.materialsammlung.owner-link-list[page.owner] }}" target="_blank">{{ site.data.materialsammlung.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE/{{ site.data.materialsammlung.owner-short-name-list[page.owner] }}</p>
                     <hr>
                 </div>
             </div>
